test/typecheck/pass/type_pat_parens.sail
default Order dec

$include <prelude.sail>

val main : unit -> unit

function main() = {
  let _ as bool((((('b))))) = true;
}
