test/typecheck/fail/duplicate_binding.sail
default Order dec

$include <prelude.sail>

function main() : unit -> unit = {
  let (x, x) = (true, false);
  ()
}
